--- a/templates/tomcat.conf_deb.erb
+++ b/templates/tomcat.conf_deb.erb
@@ -2,12 +2,12 @@
 # Managed by Puppet
 # ******************
 # Run Tomcat as this user ID. Not setting this or leaving it blank will use the
-# default of <%= @service_name %>.
-TOMCAT7_USER=<%= @tomcat_user %>
+# default of <%= @service_name_real %>.
+TOMCAT7_USER=<%= @tomcat_user_real %>
 
 # Run Tomcat as this group ID. Not setting this or leaving it blank will use
-# the default of <%= @service_name %>.
-TOMCAT7_GROUP=<%= @tomcat_group %>
+# the default of <%= @service_name_real %>.
+TOMCAT7_GROUP=<%= @tomcat_group_real %>
 
 # The home directory of the Java development kit (JDK). You need at least
 # JDK version 7. If JAVA_HOME is not set, some common directories for
@@ -41,14 +41,14 @@ JAVA_OPTS="-Djava.awt.headless=true -Xmx128m -XX:+UseConcMarkSweepGC"
 # Use the Java security manager? (yes/no, default: no)
 #TOMCAT8_SECURITY=no
 
-# Number of days to keep logfiles in /var/log/<%= @service_name %>. Default is 14 days.
+# Number of days to keep logfiles in /var/log/<%= @service_name_real %>. Default is 14 days.
 #LOGFILE_DAYS=14
 # Whether to compress logfiles older than today's
 #LOGFILE_COMPRESS=1
 
 # Location of the JVM temporary directory
 # WARNING: This directory will be destroyed and recreated at every startup !
-#JVM_TMP=/tmp/<%= @service_name %>-temp
+#JVM_TMP=/tmp/<%= @service_name_real %>-temp
 
 # If you run Tomcat on port numbers that are all higher than 1023, then you
 # do not need authbind.  It is used for binding Tomcat to lower port numbers.
