--- a/templates/common/server.xml.erb
+++ b/templates/common/server.xml.erb
@@ -5,16 +5,16 @@
 # ******************
 -->
 <Server port="<%= @control_port %>" shutdown="SHUTDOWN">
-<% if scope.function_versioncmp([@version, '8.0.14']) >= 0 -%>
+<% if scope.function_versioncmp([scope['::tomcat::version'], '8.0.14']) >= 0 -%>
   <Listener className="org.apache.catalina.startup.VersionLoggerListener" />
 <% end -%>
-<% if scope.function_versioncmp([@maj_version, '7']) >= 0 -%>
+<% if scope.function_versioncmp([scope['::tomcat::maj_version'], '7']) >= 0 -%>
   <Listener className="org.apache.catalina.core.ThreadLocalLeakPreventionListener" />
 <% end -%>
-<% if @maj_version == '7' -%>
+<% if scope['::tomcat::maj_version'] == '7' -%>
   <Listener className="org.apache.catalina.core.JasperListener" />
 <% end -%>
-<% if @maj_version == '6' -%>
+<% if scope['::tomcat::maj_version'] == '6' -%>
   <Listener className="org.apache.catalina.mbeans.ServerLifecycleListener" />
 <% end -%>
 <% if @jmx_listener -%>
@@ -51,7 +51,7 @@
 
 <% end -%>
 <% if @ssl_connector -%>
-<% if @maj_version == '8' -%>
+<% if scope['::tomcat::maj_version'] == '8' -%>
     <Connector port="<%= @ssl_port %>" protocol="org.apache.coyote.http11.Http11NioProtocol"
 <% else -%>
     <Connector port="<%= @ssl_port %>" protocol="org.apache.coyote.http11.Http11Protocol"
@@ -73,7 +73,7 @@
 
       <Host name="<%= @hostname %>" appBase="webapps"
             autoDeploy="<%= @autodeploy %>" deployOnStartup="<%= @deployOnStartup %>"
-            unpackWARs="<%= @unpackwars %>" <% if @maj_version >= '7' -%>undeployOldVersions="<%= @undeployoldversions %>" <% end -%>>
+            unpackWARs="<%= @unpackwars %>" <% if scope['::tomcat::maj_version'] >= '7' -%>undeployOldVersions="<%= @undeployoldversions %>" <% end -%>>
 
 <% if @singlesignon_valve -%>
         <Valve className="org.apache.catalina.authenticator.SingleSignOn" />
