--- a/templates/common/server.xml.erb
+++ b/templates/common/server.xml.erb
@@ -70,7 +70,7 @@
 
       <Host name="<%= @hostname %>" appBase="webapps"
             autoDeploy="<%= @autodeploy %>" deployOnStartup="<%= @deployOnStartup %>"
-            unpackWARs="<%= @unpackwars %>" <% if scope['::tomcat::maj_version'] >= '7' -%>undeployOldVersions="<%= @undeployoldversions %>" <% end -%>>
+            unpackWARs="<%= @unpackwars %>" <% if scope.function_versioncmp([scope['::tomcat::maj_version'], '7']) >= 0 -%>undeployOldVersions="<%= @undeployoldversions %>" <% end -%>>
 
 <% if @singlesignon_valve -%>
         <Valve className="org.apache.catalina.authenticator.SingleSignOn" />
