--- a/templates/common/server.xml.erb
+++ b/templates/common/server.xml.erb
@@ -34,6 +34,17 @@
               factory="org.apache.catalina.users.MemoryUserDatabaseFactory"
               pathname="conf/tomcat-users.xml" />
 <% end -%>
+
+<% if @globalnaming_resources and ! @globalnaming_resources? -%>
+   <%- [@globalnaming_resources].flatten.compact.each do |resource| -%>
+   <Resource
+      <%- resource.each_pair do |attrib, att_value| -%>
+      <%= attrib %>="<%= att_value %>"
+      <%- end -%>
+      />
+   <%- end -%>
+<% end -%>
+
   </GlobalNamingResources>
 
   <Service name="Catalina">
