--- a/templates/common/setenv.erb
+++ b/templates/common/setenv.erb
@@ -21,16 +21,12 @@ CATALINA_TMPDIR="<%= @catalina_tmpdir_real %>"
 <% end -%>
 
 <% if scope['::osfamily'] == 'Debian' -%>
-<% if scope['::tomcat::tomcat_user_real'] and scope['::tomcat::tomcat_user_real'] != '' %>TOMCAT<%= @maj_version %>_USER="<%= scope['::tomcat::tomcat_user_real'] %>"
-<% end -%>
-<% if scope['::tomcat::tomcat_group_real'] and scope['::tomcat::tomcat_group_real'] != '' %>TOMCAT<%= @maj_version %>_GROUP="<%= scope['::tomcat::tomcat_group_real'] %>"
-<% end -%>
+TOMCAT<%= @maj_version %>_USER="<%= scope['::tomcat::tomcat_user_real'] %>"
+TOMCAT<%= @maj_version %>_GROUP="<%= scope['::tomcat::tomcat_group_real'] %>"
 
 <% else -%>
-<% if scope['::tomcat::tomcat_user_real'] and scope['::tomcat::tomcat_user_real'] != '' %>TOMCAT_USER="<%= scope['::tomcat::tomcat_user_real'] %>"
-<% end -%>
-<% if scope['::tomcat::tomcat_group_real'] and scope['::tomcat::tomcat_group_real'] != '' %>TOMCAT_GROUP="<%= scope['::tomcat::tomcat_group_real'] %>"
-<% end -%>
+TOMCAT_USER="<%= scope['::tomcat::tomcat_user_real'] %>"
+TOMCAT_GROUP="<%= scope['::tomcat::tomcat_group_real'] %>"
 
 <% end -%>
 <% if @lang and @lang != '' -%>LANG="<%= @lang %>"<% end -%>
