--- a/templates/common/server.xml.erb
+++ b/templates/common/server.xml.erb
@@ -56,9 +56,17 @@
 
 <% end -%>
 <% if @http_connector -%>
-    <Connector port="<%= @http_port %>" protocol="HTTP/1.1"
-               connectionTimeout="20000"
-               redirectPort="<%= @ssl_port %>" <% if @use_threadpool and @threadpool_executor -%>executor="tomcatThreadPool" <% end -%>/>
+    <Connector port="<%= @http_port %>"
+               protocol="<%= @http_protocol %>"
+               connectionTimeout="<%= @http_connection_timeout %>"
+               redirectPort="<%= @ssl_port %>" <% if @use_threadpool and @threadpool_executor -%>executor="tomcatThreadPool" <% end -%>
+               <% if @http_uri_encoding -%>URIEncoding="<%= @http_uri_encoding %>"<% end -%>
+               <% if @http_compression -%>compression="on"<% end -%>
+               <% if @http_max_threads -%>maxThreads="<%= @http_max_threads %>"<% end -%>
+               <% @http_params.each_pair do |attrib, value| -%>
+               <%= attrib %>="<%= value %>"
+               <%- end -%>
+    />
 
 <% end -%>
 <% if @ssl_connector -%>
