--- a/templates/common/server.xml.erb
+++ b/templates/common/server.xml.erb
@@ -56,40 +56,65 @@
 
 <% end -%>
 <% if @http_connector -%>
-    <Connector port="<%= @http_port %>"
-               protocol="<%= @http_protocol %>"
-               connectionTimeout="<%= @http_connection_timeout %>"
-               redirectPort="<%= @ssl_port %>" <% if @use_threadpool and @threadpool_executor -%>executor="tomcatThreadPool" <% end -%>
-               <%- if @http_uri_encoding -%>URIEncoding="<%= @http_uri_encoding %>"<% end -%>
-               <%- if @http_compression -%>compression="on"<% end -%>
-               <%- if @http_max_threads -%>maxThreads="<%= @http_max_threads %>"<% end -%>
+    <Connector port="<%= @http_port %>"<% if @http_protocol %> protocol="<%= @http_protocol %>"<% end %>
+               <%- if @http_use_threadpool and @threadpool_executor -%>
+               executor="tomcatThreadPool"
+               <%- end -%>
+               <%- if @ssl_connector -%>
+               redirectPort="<%= @ssl_port %>"
+               <%- end -%>
+               <%- if @http_connectiontimeout -%>
+               connectionTimeout="<%= @http_connectiontimeout %>"
+               <%- end -%>
+               <%- if @http_uriencoding -%>
+               URIEncoding="<%= @http_uriencoding %>"
+               <%- end -%>
+               <%- if @http_compression -%>
+               compression="on"
+               <%- end -%>
+               <%- if @http_maxthreads -%>
+               maxThreads="<%= @http_maxthreads %>"
+               <%- end -%>
                <%- @http_params.each_pair do |attrib, value| -%>
                <%= attrib %>="<%= value %>"
-               <%- end %>
+               <%- end -%>
     />
 
 <% end -%>
 <% if @ssl_connector -%>
-   <Connector port="<%= @ssl_port %>"
-<% if @ssl_protocol -%>
-              protocol=<%= @ssl_protocol %>"
-<%- else -%>
-<% if scope['::tomcat::maj_version'] == '8' -%>
-              protocol="org.apache.coyote.http11.Http11NioProtocol"
-<% else -%>
-              protocol="org.apache.coyote.http11.Http11Protocol"
-<% end -%>
-<% end -%>
-              connectionTimeout="<%= @ssl_connection_timeout %>"
-              <%- if @ssl_uri_encoding -%>URIEncoding="<%= @ssl_uri_encoding %>"<% end -%>
-              <%- if @ssl_compression -%>compression="on"<% end -%>
-              maxThreads="<%= @ssl_max_threads %>"
-              <%- if @ssl_keystore -%>keystoreFile="<%= @ssl_keystore %>"<% end -%>
-              <%- @ssl_params.each_pair do |attrib, value| -%>
-              <%= attrib %>="<%= value %>"
-              <%- end -%>
-              SSLEnabled="true" scheme="https" secure="true"
-              clientAuth="false" sslProtocol="TLS" />
+    <Connector port="<%= @ssl_port %>"<% if @ssl_protocol %> protocol="<%= @ssl_protocol %>"<% end %>
+               SSLEnabled="true" scheme="https" secure="true"
+               <%- if @ssl_clientauth -%>
+               clientAuth="<%= ssl_clientauth %>"
+               <%- end -%>
+               <%- if @ssl_sslprotocol -%>
+               sslProtocol="<%= ssl_sslprotocol %>"
+               <%- end -%>
+               <%- if @ssl_use_threadpool and @threadpool_executor -%>
+               executor="tomcatThreadPool"
+               <%- end -%>
+               <%- if @ssl_connector -%>
+               redirectPort="<%= @ssl_port %>"
+               <%- end -%>
+               <%- if @ssl_connectiontimeout -%>
+               connectionTimeout="<%= @ssl_connectiontimeout %>"
+               <%- end -%>
+               <%- if @ssl_uriencoding -%>
+               URIEncoding="<%= @ssl_uriencoding %>"
+               <%- end -%>
+               <%- if @ssl_compression -%>
+               compression="on"
+               <%- end -%>
+               <%- if @ssl_maxthreads -%>
+               maxThreads="<%= @ssl_maxthreads %>"
+               <%- end -%>
+               <%- if @ssl_keystore -%>
+               keystoreFile="<%= @ssl_keystore %>"
+               <%- end -%>
+               <%- @ssl_params.each_pair do |attrib, value| -%>
+               <%= attrib %>="<%= value %>"
+               <%- end -%>
+    />
 
 <% end -%>
 <% if @ajp_connector -%>
