--- a/templates/common/server.xml/070_ajp_connector.erb
+++ b/templates/common/server.xml/070_ajp_connector.erb
@@ -1,12 +1,9 @@
 <%- if @ajp_connector -%>
 
-    <Connector port="<%= @ajp_port %>"<% if @ajp_protocol %> protocol="<%= @ajp_protocol %>"<% end %>
-               <%- if @ssl_connector -%>
-               redirectPort="<%= @ssl_port %>"
-               <%- end -%>
-               <%- if @ajp_params and ! @ajp_params.empty? -%>
-               <%- @ajp_params.each_pair do |attrib, value| -%>
-               <%= attrib %>="<%= value %>"<% if attrib == @ajp_params.keys.last %> /><% end %>
+    <Connector port="<%= @ajp_port %>"<% if @ssl_connector %> redirectPort="<%= @ssl_port %>"<% end %>
+               <%- if @ajp_params_real and ! @ajp_params_real.empty? -%>
+               <%- @ajp_params_real.each_pair do |attrib, value| -%>
+               <%= attrib %>="<%= value %>"<% if attrib == @ajp_params_real.keys.last %> /><% end %>
                <%- end -%>
                <%- else -%>
     />
