--- a/templates/common/server.xml/051_ssl_connector.erb
+++ b/templates/common/server.xml/051_ssl_connector.erb
@@ -1,11 +1,8 @@
-<%- if @ssl_connector -%>
 
-    <Connector port="<%= @ssl_port %>" SSLEnabled="true" scheme="https" secure="true"
-               <%- if @ssl_params_real and ! @ssl_params_real.empty? -%>
+    <Connector port="<%= @ssl_port %>" SSLEnabled="true" scheme="https" secure="true"<% if @ssl_params_real and ! @ssl_params_real.empty? %>
                <%- @ssl_params_real.each_pair do |attrib, value| -%>
                <%= attrib %>="<%= value %>"<% if attrib == @ssl_params_real.keys.last %> /><% end %>
                <%- end -%>
                <%- else -%>
-    />
+ />
                <%- end -%>
-<% end -%>
