new parameters for: * Listener * Server * Service * Engine * Host

--- a/templates/common/server.xml/000_header.erb
+++ b/templates/common/server.xml/000_header.erb
@@ -4,4 +4,6 @@
 # Managed by Puppet
 # ******************
 -->
-<Server port="<%= @control_port %>" shutdown="SHUTDOWN">
+<Server<%- if @server_params_real and ! @server_params_real.empty? -%>
+  <%- server_params_real.each_pair do |attrib, att_value| -%> <%= attrib %>="<%= att_value %>"<%- end -%>
+<%- end -%> >
