--- a/templates/common/server.xml/030_service.erb
+++ b/templates/common/server.xml/030_service.erb
@@ -1,2 +1,4 @@
 
-  <Service name="Catalina">
+  <Service<%- if @svc_params_real and ! @svc_params_real.empty? -%>
+    <%- svc_params_real.each_pair do |attrib, att_value| -%> <%= attrib %>="<%= att_value %>"<%- end -%>
+  <%- end -%>>
