--- a/templates/common/server.xml/100_valves.erb
+++ b/templates/common/server.xml/100_valves.erb
@@ -3,7 +3,7 @@
 <% end -%>
 <% if @accesslog_valve %>
         <Valve className="org.apache.catalina.valves.AccessLogValve" directory="logs"
-               prefix="<%= @host_name %>_access_log<% if scope.function_versioncmp([scope['::tomcat::maj_version'], '7']) <= 0 -%>.<% end -%>" suffix=".txt"
+               prefix="<%= @host_name %>_access_log<% if scope.function_versioncmp([@maj_version, '7']) <= 0 -%>.<% end -%>" suffix=".txt"
                pattern="%h %l %u %t &quot;%r&quot; %s %b" />
 <% end -%>
 <%- if @valves and ! @valves.empty? -%>
