--- a/templates/common/server.xml/080_realms.erb
+++ b/templates/common/server.xml/080_realms.erb
@@ -8,11 +8,11 @@
 <% end -%>
 <%- if @realms and ! @realms.empty? -%>
   <%- [@realms].flatten.compact.each do |realm| %>
-    <%- realm.each_pair do |attrib, att_value| -%>
+    <%- realm.each_pair do |attrib, value| -%>
       <%- if attrib == realm.keys.first -%>
-<% if @lockout_realm %>  <% end %>      <Realm <%= attrib %>="<%= att_value %>"<% if attrib == realm.keys.last %> /><% end %>
+<% if @lockout_realm %>  <% end %>      <Realm <%= attrib %>="<%= value %>"<% if attrib == realm.keys.last %> /><% end %>
       <%- else -%>
-<% if @lockout_realm %>  <% end %>             <%= attrib %>="<%= att_value %>"<% if attrib == realm.keys.last %> /><% end %>
+<% if @lockout_realm %>  <% end %>             <%= attrib %>="<%= value %>"<% if attrib == realm.keys.last %> /><% end %>
       <%- end -%>
     <%- end -%>
   <%- end -%>
